--- a/footer.css
+++ b/footer.css
@@ -4,12 +4,13 @@
     position: fixed;
     bottom: 0;
     height: 60px;
-    background-color: white;
-    opacity: 80%;
+    background: linear-gradient(150deg,rgb(228, 219, 219),rgb(245, 213, 218));
+    /*opacity: 80%;*/
     display: flex;
     justify-content: space-between;
-    border-top:3 solid transparent;
-    box-shadow:  0 0 15px rgb(106, 102, 102);
+    /*border-top:3 solid transparent;
+    box-shadow:  0 0 15px rgb(106, 102, 102);*/
+    box-shadow: inset -15px 10px 20px rgb(216, 215, 215);
 }
 .ph, .email, .line{
     width: 33%;
